test/spec_vectors/load/fail/module_36.wat
(module (memory 1) (func (result i64) (i64.load16_s (f32.const 0))))